# veriparse

./: .clang-format  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md  RELICENSING.md  TODO.rst  dev.ps1  vcpkg.json
apps/: CMakeLists.txt
apps/license/: CMakeLists.txt
apps/license/license_generator/resources/: README.txt  public.pem
apps/license/license_generator/src/: license_generator.cpp  main.cpp
apps/license/license_validator/src/: main.cpp
apps/license_generator/: CMakeLists.txt  README.txt
apps/license_generator/resources/: private.pem
apps/license_generator/src/: license_generator.cpp  license_generator.hpp  main.cpp
apps/license_validator/: CMakeLists.txt  check.sh
apps/license_validator/src/: main.cpp
apps/veriflat/: CMakeLists.txt
apps/veriflat/src/: config.hpp  main.cpp
apps/veriflat/test/: Makefile
apps/veriobf/: CMakeLists.txt
apps/veriparse/: CMakeLists.txt
apps/veriparse/scripts/: veriparse  veriparse.cmd  veriparse.ps1
apps/veriparse/test/: Makefile  readme.txt
apps/veriparse/test/common/: license.sh
apps/veriparse/veridump/: CMakeLists.txt
apps/veriparse/veridump/src/: main.cpp
apps/veriparse/veriflat/: CMakeLists.txt
apps/veriparse/veriflat/src/: config.hpp  main.cpp  parameters_overloading.cpp  parameters_overloading.hpp
apps/veriparse/veriobf/: CMakeLists.txt
apps/veriparse/veriobf/src/: config.hpp  main.cpp
apps/veriparse/veripp/: CMakeLists.txt
apps/veriparse/veripp/src/: main.cpp
apps/veriparse/veripp/test/: run_veripp_test.cmake
lib/: CMakeLists.txt  TODO.rst
lib/include/license/: buffer_decryption.hpp  buffer_encryption.hpp  encode_key.py  hide_string.hpp  hw_resources.hpp  license_checker.hpp  platform_id.hpp  public_key.hpp  public_key.hpp.template
lib/include/veriparse/: version.hpp
lib/include/veriparse/AST/: always.hpp  alwayscomb.hpp  alwaysff.hpp  alwayslatch.hpp  and.hpp  arg.hpp  assign.hpp  assignmentpattern.hpp  assocdim.hpp  bit.hpp  bittype.hpp  block.hpp  blockingsubstitution.hpp  break.hpp  byte.hpp  bytetype.hpp  call.hpp  case.hpp  casestatement.hpp  casexstatement.hpp  casezstatement.hpp  cast.hpp  chandletype.hpp  chargestrength.hpp  concat.hpp  cond.hpp  constant.hpp  constcast.hpp  continue.hpp  customtype.hpp  customtypevar.hpp  customvariable.hpp  datamodifier.hpp  datatype.hpp  declaration.hpp  defparam.hpp  defparamlist.hpp  delaystatement.hpp  description.hpp  dimension.hpp  (+186 more)
lib/include/veriparse/generators/: dot_generator.hpp  generator_base.hpp  verilog_generator.hpp  yaml_generator.hpp
lib/include/veriparse/importers/: yaml_importer.hpp  yaml_specializations.hpp
lib/include/veriparse/logger/: file_report.hpp  logger.hpp  string_report.hpp
lib/include/veriparse/misc/: bignum.hpp  math.hpp  string_utils.hpp  tree.hpp  utils.hpp
lib/include/veriparse/parser/: preprocessor.hpp  verilog.hpp  verilog_number.hpp
lib/src/: version.cpp.in
lib/src/AST/: always.cpp  alwayscomb.cpp  alwaysff.cpp  alwayslatch.cpp  and.cpp  arg.cpp  assign.cpp  assignmentpattern.cpp  assocdim.cpp  bit.cpp  bittype.cpp  block.cpp  blockingsubstitution.cpp  break.cpp  byte.cpp  bytetype.cpp  call.cpp  case.cpp  casestatement.cpp  casexstatement.cpp  casezstatement.cpp  cast.cpp  chandletype.cpp  chargestrength.cpp  concat.cpp  cond.cpp  constant.cpp  constcast.cpp  continue.cpp  customtype.cpp  customtypevar.cpp  customvariable.cpp  datamodifier.cpp  datatype.cpp  declaration.cpp  defparam.cpp  defparamlist.cpp  delaystatement.cpp  description.cpp  dimension.cpp  (+184 more)
lib/src/generators/: dot_generator.cpp  verilog_generator.cpp  yaml_generator.cpp
lib/src/importers/: yaml_importer.cpp
lib/src/logger/: file_report.cpp  logger.cpp  string_report.cpp
lib/src/misc/: math.cpp  string_utils.cpp
lib/src/parser/: preprocessor.cpp  verilog.cpp  verilog_number.cpp
lib/src/parser/preprocessor/: pp_conditional.cpp  pp_conditional.hpp  pp_driver.cpp  pp_driver.hpp  pp_macro.cpp  pp_macro.hpp  pp_scanner.hpp  pp_scanner.ll  pp_scanner_impl.cpp
lib/src/parser/verilog/: verilog_driver.cpp  verilog_driver.hpp  verilog_parser.yy  verilog_scanner.hpp  verilog_scanner.ll
lib/src/parser/verilog_number/: verilog_number_driver.cpp  verilog_number_driver.hpp  verilog_number_parser.yy  verilog_number_scanner.hpp  verilog_number_scanner.ll
lib/src/passes/analysis/: call.cpp  dimensions.cpp  function.cpp  functioncall.cpp  instance.cpp  lvalue.cpp  module.cpp  synthesizable_check.cpp  systemcall.cpp  task.cpp  taskcall.cpp  unique_declaration.cpp
lib/src/passes/transformations/: annotate_declaration.cpp  annotate_scope.cpp  anotate_declaration.cpp  ast_replace.cpp  branch_selection.cpp  constant_folding.cpp  deadcode_elimination.cpp  enum_elaboration.cpp  enum_inliner.cpp  expression_evaluation.cpp  expression_operators_double.cpp  expression_operators_floatconst.cpp  expression_operators_intconst.cpp  expression_operators_ternary.cpp  function_evaluation.cpp  generate_removal.cpp  interface_elaboration.cpp  localparam_inliner.cpp  loop_unrolling.cpp  module_flattener.cpp  module_inliner.cpp  module_instance_normalizer.cpp  module_io_normalizer.cpp  module_obfuscator.cpp  name_resolution.cpp  package_inliner.cpp  parameter_inliner.cpp  resolve_module.cpp  scope_elevator.cpp  scope_table.cpp  (+6 more)
lib/test/: CMakeLists.txt
lib/test/AST/: test_ast.cpp  test_node.cpp
lib/test/cosim/: CMakeLists.txt  cosim_helpers.hpp
lib/test/generators/: test_verilog_generator.cpp  test_yaml_generator.cpp
lib/test/helpers/: helpers.hpp
lib/test/importers/: main.cpp  test_yaml_importer.cpp
lib/test/misc/: test_string_utils.cpp  test_tree_node.cpp
lib/test/parser/: test_verilog.cpp  test_verilog_number.cpp
lib/test/preprocessor/: test_conditional.cpp  test_define.cpp  test_func_macros.cpp  test_include.cpp  test_line_tracking.cpp  test_parser_integration.cpp  test_skeleton.cpp  test_sv_macros.cpp
lib/tools/ASTGen/: astgen.py  astgen.sh  verilog_ast.yaml  yaml_ordered_loader.py
lib/tools/misc/: meld_yaml.py  re.py  regex.py  source.sh  yaml_printer.py
(+1252 files in other folders)
